Le Wagon Day 35 - Changes to add .png to everything

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -24,31 +24,31 @@
               <div class="categories">
                 <div class="category p-3">
                   <div class="d-inline">
-                    <p><%= image_tag "surfboard_icon", width: "12px" %> Board ype</p>
+                    <p><%= image_tag "surfboard_icon.png", width: "12px" %> Board ype</p>
                   </div>
                   <p><strong><%= booking.surfboard.category %></strong></p>
                 </div>
                 <div class="category p-3">
                   <div class="d-inline">
-                    <p><%= image_tag "calender_icon", width: "12px" %> Check-in</p>
+                    <p><%= image_tag "calender_icon.png", width: "12px" %> Check-in</p>
                   </div>
                   <p><strong><%= booking.start_date.strftime("%b %d, %Y")%></strong></p>
                 </div>
                 <div class="category p-3">
                   <div class="d-inline">
-                    <p><%= image_tag "calender_icon", width: "12px" %>Check-out</p>
+                    <p><%= image_tag "calender_icon.png", width: "12px" %>Check-out</p>
                   </div>
                   <p><strong><%= booking.end_date.strftime("%b %d, %Y")%></strong></p>
                 </div>
                 <div class="category p-3">
                   <div class="d-inline">
-                    <p><%= image_tag "location_icon", width: "12px" %>Location</p>
+                    <p><%= image_tag "location_icon.png", width: "12px" %>Location</p>
                     <p><strong><%= booking.surfboard.location%></strong></p>
                   </div>
                 </div>
                 <div class="category p-3">
                   <div class="d-inline">
-                    <p><%= image_tag "price_icon", width: "12px" %>Total Price</p>
+                    <p><%= image_tag "price_icon.png", width: "12px" %>Total Price</p>
                     <p><strong><%= booking.total_price%>k IDR</strong></p>
                   </div>
                 </div>
@@ -91,31 +91,31 @@
               <div class="categories">
                 <div class="category p-3">
                   <div class="d-inline">
-                    <p><%= image_tag "surfboard_icon", width: "12px" %> Board Type</p>
+                    <p><%= image_tag "surfboard_icon.png", width: "12px" %> Board Type</p>
                   </div>
                   <p><strong><%= booking.surfboard.category %></strong></p>
                 </div>
                 <div class="category p-3">
                   <div class="d-inline">
-                    <p><%= image_tag "calender_icon", width: "12px" %> Check-in</p>
+                    <p><%= image_tag "calender_icon.png", width: "12px" %> Check-in</p>
                   </div>
                   <p><strong><%= booking.start_date.strftime("%b %d, %Y")%></strong></p>
                 </div>
                 <div class="category p-3">
                   <div class="d-inline">
-                    <p><%= image_tag "calender_icon", width: "12px" %>Check-out</p>
+                    <p><%= image_tag "calender_icon.png", width: "12px" %>Check-out</p>
                   </div>
                   <p><strong><%= booking.end_date.strftime("%b %d, %Y")%></strong></p>
                 </div>
                 <div class="category p-3">
                   <div class="d-inline">
-                    <p><%= image_tag "location_icon", width: "12px" %>Location</p>
+                    <p><%= image_tag "location_icon.png", width: "12px" %>Location</p>
                     <p><strong><%= booking.surfboard.location%></strong></p>
                   </div>
                 </div>
                   <div class="category p-3">
                   <div class="d-inline">
-                    <p><%= image_tag "price_icon", width: "12px" %>Total Price</p>
+                    <p><%= image_tag "price_icon.png", width: "12px" %>Total Price</p>
                     <p><strong><%= booking.total_price%>k IDR</strong></p>
                   </div>
                 </div>
