--- a/app/assets/stylesheets/components/_cardlist.scss
+++ b/app/assets/stylesheets/components/_cardlist.scss
@@ -12,6 +12,12 @@
   object-fit: cover;
 }
 
+.cardlist .book-img {
+  height: 100%;
+  width: 120px;
+  object-fit: cover;
+}
+
 .cardlist h2 {
   font-size: 16px;
   font-weight: bold;
